# ethers-rs

./: .clippy.toml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG-OLD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  book.toml  cliff.toml  contract.sol  deny.toml  flake.nix  release.toml
crates/ethers/: Cargo.toml
crates/ethers-abi/: Cargo.toml
crates/ethers-abi/src/: lib.rs  tokens.rs
crates/ethers-contract/: Cargo.toml
crates/ethers-contract/ethers-contract-abigen/: Cargo.toml
crates/ethers-contract/ethers-contract-derive/: Cargo.toml
crates/ethers-contract/src/: call.rs  contract.rs  event.rs  factory.rs  lib.rs  mod.rs  tokens.rs
crates/ethers-derive/: Cargo.toml
crates/ethers-derive/src/: README.md  lib.rs
crates/ethers-providers/: Cargo.toml  mod.rs
crates/ethers-providers/src/: ens.rs  http.rs  lib.rs  networks.rs  provider.rs
crates/ethers-signers/: Cargo.toml
crates/ethers-signers/src/: client.rs  lib.rs  mod.rs  networks.rs  wallet.rs
crates/ethers-types/: Cargo.toml
crates/ethers-types/src/: block.rs  ens.rs  keys.rs  lib.rs  log.rs  signature.rs  solc.rs  transaction.rs
crates/ethers-utils/: Cargo.toml
crates/ethers-utils/src/: ganache.rs  lib.rs
crates/ethers/examples/: contract.rs  ens.rs  get_logs.rs  local_signer.rs  sign.rs  transfer_eth.rs
derive-eip712/: Cargo.toml
derive-eip712/src/: lib.rs
derive-eip712/tests/: derive_eip712.rs
ethers/: Cargo.toml
ethers-addressbook/: Cargo.toml  README.md
ethers-addressbook/src/: lib.rs
ethers-addressbook/tests/: addressbook_tests.rs
ethers-cli/: Cargo.toml  README.md
ethers-cli/src/: application.rs  commands.rs  config.rs  error.rs  lib.rs  prelude.rs
ethers-cli/tests/: acceptance.rs
ethers-compile/: Cargo.toml  README.md
ethers-compile/benches/: compile_many.rs  read_all.rs
ethers-compile/compiler/: mod.rs  pipeline.rs  traits.rs
ethers-compile/project/: builder.rs  mod.rs  project.rs
ethers-compile/solc/: compiler.rs  mod.rs
ethers-compile/src/: cache.rs  config.rs  ctrait.rs  error.rs  lib.rs  project_util.rs  resolver.rs  utils.rs
ethers-compile/test-data/: cheatcodes.sol-sourcemap.txt  solidity-files-cache.json
ethers-compile/tests/: project.rs
ethers-connections/: Cargo.toml
ethers-connections/src/: batch.rs  call.rs  connection.rs  err.rs  jsonrpc.rs  lib.rs  pending.rs  provider.rs  sub.rs  types.rs
ethers-connections/tests/: http.rs  ipc.rs
ethers-contract/: Cargo.toml  README.md  build.rs  data  expanded.rs
ethers-contract/ethers-contract-abigen/: Cargo.toml  README.md  expanded.rs  token.rs
ethers-contract/ethers-contract-derive/: Cargo.toml  README.md
ethers-contract/src/: base.rs  call.rs  call_core.rs  codec.rs  contract.rs  error.rs  event.rs  event_core.rs  factory.rs  lib.rs  log.rs  multicall.rs  multicall_contract.rs  stream.rs
ethers-contract/tests/: abigen.rs  codec.rs  contract.rs  contract.sol  decode_logs2.rs  get_past_events.rs  test_helpers.rs  watch_events.rs
ethers-core/: Cargo.toml  README.md
ethers-core/ethers-derive-eip712/: Cargo.toml
ethers-core/src/: lib.rs
ethers-core/testdata/: proof.json  proof_empty_key.json  proof_uint_key.json  receipt-17451262-12.hex  receipt-17451262-12.json  receipt-17451262-2.hex  receipt-17451262-2.json  receipt-17451262-6.hex  receipt-17451262-6.json  solc-obj.json
ethers-etherscan/: Cargo.toml  README.md
ethers-etherscan/resources/: IERC20.sol  UniswapExchange.sol
ethers-etherscan/src/: account.rs  blocks.rs  contract.rs  errors.rs  gas.rs  lib.rs  source_tree.rs  stats.rs  transaction.rs  utils.rs  verify.rs
ethers-middleware/: Cargo.toml  README.md
ethers-middleware/contracts/: DSProxyFactory.json  DsProxyFactory.json
ethers-middleware/src/: builder.rs  ccip_read.rs  client.rs  forge.rs  lib.rs  multicall.rs  nonce_manager.rs  policy.rs  provider_builder.rs  signer.rs
ethers-middleware/tests/: builder.rs  gas_escalator.rs  gas_oracle.rs  nonce_manager.rs  signer.rs  stack.rs  transformer.rs
ethers-providers/: Cargo.toml  README.md
ethers-providers/src/: admin.rs  cache.rs  call_raw.rs  ens.rs  erc.rs  errors.rs  http.rs  lib.rs  log_query.rs  middleware.rs  networks.rs  new_provider.rs  pending_escalator.rs  pending_transaction.rs  provider.rs  pubsub.rs  stream.rs  utils.rs  ws.rs
ethers-providers/tests/: log_query.rs  provider.rs  trace_data.json  txpool.rs  wasm.rs  ws_errors.rs
ethers-signers/: Cargo.toml  README.md
ethers-signers/src/: client.rs  lib.rs  nonce_manager.rs  wallet.rs
ethers-signers/tests/: send_eth.rs  signer.rs
ethers-solc/: Cargo.toml  README.md
ethers-solc/benches/: compile_many.rs  read_all.rs  resolve_graph.rs
ethers-solc/src/: artifact_output.rs  artifacts.rs  buildinfo.rs  cache.rs  compile.rs  config.rs  error.rs  filter.rs  graph.rs  hh.rs  layer.rs  lib.rs  mock.rs  output.rs  project_util.rs  remappings.rs  report.rs  resolver.rs  sourcemap.rs  utils.rs
ethers-solc/test-data/: foundryissue2462.json  hh-greeter-artifact.json  library-remapping-in-2.json  library-remapping-in.json  out-source-maps.txt  solidity-files-cache.json  unlinked.txt
ethers-solc/tests/: mocked.rs  project.rs
ethers-transports/: Cargo.toml  README.md
ethers-transports/src/: common.rs  err.rs  http.rs  ipc.rs  jsonrpc.rs  lib.rs  mock.rs  provider.rs  quorum.rs  rw.rs  sub.rs  transports.rs  types.rs  ws.rs
ethers-transports/tests/: ipc.rs
ethers/examples/: abigen.rs  contract.rs  contract_human_readable.rs  contract_with_abi.rs  contract_with_abi_and_structs.rs  ens.rs  get_logs.rs  ipc.rs  ledger.rs  local_signer.rs  sign.rs  transfer_eth.rs  watch_blocks.rs  yubi.rs
ethers/src/: lib.rs
ethers/tests/: celo.rs  eip712.rs  main.rs  major_contracts.rs
examples/anvil/: Cargo.toml
examples/contracts/: Cargo.toml  README.md  contract_abigen.rs  contract_events.rs
examples/ethers-wasm/: .gitignore  Cargo.toml  README.md  index.html  index.js  package.json  webpack.config.js
examples/events/: Cargo.toml
src/: abi.rs  (+7 more)
(+825 files in other folders)
