[package]
name = "ethers-cli"
license = "MIT OR Apache-2.0"
version = "0.1.3"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"
description = "Command-line interface for the ethers-rs crate"
homepage = "https://docs.rs/ethers"
repository = "https://github.com/gakonst/ethers-rs"
keywords = ["ethereum", "web3", "celo", "ethers"]

[dependencies]
ethers-contract = { version = "0.1.3", path = "../ethers-contract", features = ["abigen"] }
ethers-core = { version = "0.1.3", path = "../ethers-core" }

gumdrop = "0.8.0"
