[package]
name = "ethers-cli"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
gumdrop = "0.7"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
ethers-contract = { version = "0.5.0", path = "../ethers-contract", features = ["abigen"] }
ethers-core = { version = "0.5.0", path = "../ethers-core" }
ethers-solc = { version = "0.1.0", path = "../ethers-solc"}
serde_json = "1.0.68"

[dependencies.abscissa_core]
version = "0.5.2"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.5.2", features = ["testing"] }
once_cell = "1.2"

