[package]
name = "ethers-cli"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "3.0.0-beta.5"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
ethers-contract = { version = "0.5.0", path = "../ethers-contract", features = ["abigen"] }
ethers-core = { version = "0.5.0", path = "../ethers-core" }
ethers-solc = { version = "0.1.0", path = "../ethers-solc"}
ethers-providers = { version = "0.5.0", path = "../ethers-providers" }
ethers-signers = { version = "0.5.0", path = "../ethers-signers" }
ethers-middleware = { version = "0.5.0", path = "../ethers-middleware" }
serde_json = "1.0.68"
abscissa_tokio = "=0.6.0-beta.1"
signatory = "0.23.0-pre"
k256 = { version = "0.9", features = ["pem"] }
rand_core = { version = "0.6", features = ["std"] }
bip32 = "0.2"
rpassword = "5"

[dependencies.abscissa_core]
version = "0.6.0-beta.1"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.6.0-beta.1", features = ["testing"] }
once_cell = "1.2"

