[package]
name = "ethers-compile"
version = "0.1.0"
authors = ["Andreas Bigger <andreas@nascent.xyz>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "../README.md"
documentation = "https://docs.rs/ethers"
repository = "https://github.com/gakonst/ethers-rs"
homepage = "https://docs.rs/ethers"
description = """
Compiler Abstraction
"""
keywords = ["ethereum", "web3", "solc", "solidity", "ethers", "vyper"]

[dependencies]
rayon = "1.5.1"

[features]
# default = ["rustls"]
# async = ["tokio", "futures-util"]
# full = ["async", "svm", "svm/blocking"]
# # Utilities for creating and testing project workspaces
# project-util = ["tempfile", "fs_extra"]
# tests = []
# openssl = ["svm/openssl"]
# rustls = ["svm/rustls"]
# asm = ["sha2/asm", "svm/sha2-asm"]