[package]
name = "ethers-contract"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
readme = "README.md"
description = "Type-safe abstractions for interacting with Ethereum smart contracts"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[dependencies]
ethers-providers = { version = "^1.0.0", path = "../ethers-providers", default-features = false }
ethers-core = { version = "^1.0.0", path = "../ethers-core", default-features = false }
ethers-contract-abigen = { version = "^1.0.0", path = "ethers-contract-abigen", default-features = false, optional = true }
ethers-contract-derive = { version = "^1.0.0", path = "ethers-contract-derive", optional = true }
ethers-derive-eip712 = { version = "^1.0.0", path = "../ethers-core/ethers-derive-eip712", optional = true }

serde = { version = "1.0.152", default-features = false }
serde_json = { version = "1.0.93", default-features = false }
thiserror = { version = "1.0", default-features = false }
once_cell = { version = "1.17.1" }
pin-project = { version = "1.0.12", default-features = false }
futures-util = { version = "^0.3" }
hex = { version = "0.4.3", default-features = false, features = ["std"] }

[dev-dependencies]
ethers-providers = { version = "^1.0.0", path = "../ethers-providers", default-features = false, features = [
    "ws",
] }
ethers-signers = { version = "^1.0.0", path = "../ethers-signers" }
ethers-contract-abigen = { version = "^1.0.0", path = "ethers-contract-abigen" }
ethers-contract-derive = { version = "^1.0.0", path = "ethers-contract-derive" }
ethers-core = { version = "^1.0.0", path = "../ethers-core", default-features = false, features = [
    "eip712",
] }
ethers-derive-eip712 = { version = "^1.0.0", path = "../ethers-core/ethers-derive-eip712" }
ethers-solc = { version = "^1.0.0", path = "../ethers-solc", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.25", default-features = false, features = ["macros"] }

[features]
default = ["abigen"]

eip712 = ["ethers-derive-eip712", "ethers-core/eip712"]

abigen-offline = ["ethers-contract-abigen", "ethers-contract-derive"]
abigen = ["abigen-offline", "ethers-contract-abigen/online"]

celo = ["legacy", "ethers-core/celo", "ethers-providers/celo"]
legacy = []

rustls = ["ethers-contract-abigen/rustls"]
openssl = ["ethers-contract-abigen/openssl"]
