[package]
name = "ethers-etherscan"
version = "2.0.0"
edition = "2021"
rust-version = "1.64"
authors = [
    "Matthias Seitz <matthias.seitz@outlook.de>",
    "Georgios Konstantopoulos <me@gakonst.com>",
]
license = "MIT OR Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/ethers"
repository = "https://github.com/gakonst/ethers-rs"
homepage = "https://docs.rs/ethers"
description = """
Rust API bindings for the etherscan.io web API
"""
keywords = ["ethereum", "web3", "etherscan", "ethers"]

[dependencies]
ethers-core = { version = "^2.0.0", path = "../ethers-core", default-features = false }
ethers-solc = { version = "^2.0.0", path = "../ethers-solc", default-features = false, optional = true }
reqwest = { version = "0.11.14", default-features = false, features = ["json"] }
serde = { version = "1.0.124", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.64", default-features = false }
serde-aux = { version = "4.1.2", default-features = false }
thiserror = "1.0"
tracing = "0.1.37"
semver = "1.0.17"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# NOTE: this enables wasm compatibility for getrandom indirectly
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
ethers-solc = { version = "^2.0.0", path = "../ethers-solc", default-features = false }

tempfile = "3.4.0"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread", "time"] }
serial_test = "1.0.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rustls"]
openssl = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
